<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAppBackground"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_10"
                android:padding="20dp">

                <TextView
                    android:id="@+id/about_App"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/about_app"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/about_build"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_App"
                    android:text="@string/about.us.name" />

                <TextView
                    android:id="@+id/about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_build" />

                <TextView
                    android:id="@+id/about_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_version"
                    android:text="@string/about.us.email" />

                <TextView
                    android:id="@+id/about_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_email"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_details_title"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/about_details_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_details_title"
                    android:text="@string/about_details_title1"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/about_details_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_details_title1"
                    android:layout_marginBottom="10dp"
                    android:text="@string/about_details_title2"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/about_details_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_details_title2"
                    android:layout_marginBottom="10dp"
                    android:text="@string/about_details_desc"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/about_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_details_desc"
                    android:layout_marginBottom="15dp"
                    android:text="@string/about_link" />

                <Button
                    android:id="@+id/aboutButton"
                    style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/about_link"
                    android:layout_alignBottom="@+id/about_link"
                    android:layout_toEndOf="@+id/about_link"
                    android:layout_toRightOf="@+id/about_link"
                    android:gravity="center_vertical|center"
                    android:text="@string/about.button.save"
                    android:textColor="@color/colorAccent" />


            </RelativeLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/about_banner_ad_unit_id" >
            </com.google.android.gms.ads.AdView>

        </LinearLayout>

    </LinearLayout>

</merge>